// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. red article flag 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flexDirection": "row",
      "marginTop": -3,
    }
  }
>
  <View
    style={
      Object {
        "backgroundColor": "red",
        "borderRadius": 2.5,
        "height": 5,
        "marginBottom": 3,
        "width": 5,
      }
    }
  />
  <Text
    style={
      Object {
        "color": "red",
        "fontFamily": "TimesDigitalW04",
        "fontSize": 10,
        "fontWeight": "bold",
        "includeFontPadding": false,
        "letterSpacing": 0,
        "lineHeight": 10,
        "marginBottom": 0,
        "marginLeft": 5,
        "paddingBottom": 0,
        "textTransform": "uppercase",
      }
    }
  >
    coloured red
  </Text>
</View>
`;

exports[`2. multiple article flags 1`] = `
<View
  style={
    Object {
      "flexDirection": "row",
      "flexWrap": "wrap",
      "marginBottom": 5,
      "marginTop": 0,
    }
  }
>
  <View
    style={
      Object {
        "marginRight": 15,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "marginTop": -3,
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#3C81BE",
            "borderRadius": 2.5,
            "height": 5,
            "marginBottom": 3,
            "width": 5,
          }
        }
      />
      <Text
        style={
          Object {
            "color": "#3C81BE",
            "fontFamily": "TimesDigitalW04",
            "fontSize": 10,
            "fontWeight": "bold",
            "includeFontPadding": false,
            "letterSpacing": 0,
            "lineHeight": 10,
            "marginBottom": 0,
            "marginLeft": 5,
            "paddingBottom": 0,
            "textTransform": "uppercase",
          }
        }
      >
        updated
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "marginRight": 15,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "marginTop": -3,
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#C51D24",
            "borderRadius": 2.5,
            "height": 5,
            "marginBottom": 3,
            "width": 5,
          }
        }
      />
      <Text
        style={
          Object {
            "color": "#C51D24",
            "fontFamily": "TimesDigitalW04",
            "fontSize": 10,
            "fontWeight": "bold",
            "includeFontPadding": false,
            "letterSpacing": 0,
            "lineHeight": 10,
            "marginBottom": 0,
            "marginLeft": 5,
            "paddingBottom": 0,
            "textTransform": "uppercase",
          }
        }
      >
        exclusive
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "marginRight": 15,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "marginTop": -3,
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#E34605",
            "borderRadius": 2.5,
            "height": 5,
            "marginBottom": 3,
            "width": 5,
          }
        }
      />
      <Text
        style={
          Object {
            "color": "#E34605",
            "fontFamily": "TimesDigitalW04",
            "fontSize": 10,
            "fontWeight": "bold",
            "includeFontPadding": false,
            "letterSpacing": 0,
            "lineHeight": 10,
            "marginBottom": 0,
            "marginLeft": 5,
            "paddingBottom": 0,
            "textTransform": "uppercase",
          }
        }
      >
        new
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "marginRight": 15,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "marginTop": -3,
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#4D4D4D",
            "borderRadius": 2.5,
            "height": 5,
            "marginBottom": 3,
            "width": 5,
          }
        }
      />
      <Text
        style={
          Object {
            "color": "#4D4D4D",
            "fontFamily": "TimesDigitalW04",
            "fontSize": 10,
            "fontWeight": "bold",
            "includeFontPadding": false,
            "letterSpacing": 0,
            "lineHeight": 10,
            "marginBottom": 0,
            "marginLeft": 5,
            "paddingBottom": 0,
            "textTransform": "uppercase",
          }
        }
      >
        sponsored
      </Text>
    </View>
  </View>
</View>
`;
